Bug 411165 - Pasting multiline text into the location bar ignores returns. Replace them with spaces now where appropriate.  Patch by Chris Lawson <cl-bugs-new@chrislawson.net>, r=hendy, sr=smorgan